--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <h1>RainbowWarrior</h1>
 </br>
 <p>
-<form methon="GET">
+<form methon="GET" action="/light?">
   Select Color Pattern:</br></br>
   <input type="radio" id="light1" name="light" value="RainbowCycle">RainbowCycle</br>
-  <input type="radio" id="light2" name="light" value="Rainbow">Rainbow</br>
+  <input type="radio" id="light2" name="light" value="Fire">Fire</br>
   <!--<input type="radio" id="light3" name="light" value="MeteorRain">MeteorRain</br>
   -->
   <input type="radio" id="light4" name="light" value="ColorGradient">ColorGradient</br>
+  <input type="radio" id="light5" name="light" value="Off">Turn LEDs off</br></br>
   <input type="submit" name="li" value="submitColor"></b></br>
   </form>
 </p>
