--- a/index.html
+++ b/index.html
@@ -4,29 +4,9 @@
 <head>
   <title>RainbowWarriorSettins</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="./bootstrap.min.css" >
   <link rel="stylesheet" href="./style.css">
 </head>
-
-<body>
-
-  <h1>RainbowWarrior</h1>
-  </br>
-  <p>
-    <form methon="GET" action="/light?">
-      Select Color Pattern:</br>
-      </br>
-      <input type="radio" id="light1" name="light" value="RainbowCycle">RainbowCycle</br>
-      <input type="radio" id="light2" name="light" value="Fire">Fire</br>
-      <input type="radio" id="light3" name="light" value="MeteorRain">MeteorRain</br>
-      <input type="radio" id="light4" name="light" value="ColorGradient">ColorGradient</br>
-      <input type="radio" id="light5" name="light" value="Off">Turn LEDs off</br>
-      </br>
-      <input type="submit" name="li" value="submitColor"></b>
-      </br>
-    </form>
-  </p>
-
   <body class="h-100">
     <div class="ground"></div>
     <div class="sky">
@@ -79,9 +59,6 @@
         </form>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 
 </html>
