--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1 class="">RainbowWarrior</h1>
       <div class="mt-3">
 
-        <form methon="GET" action="/light?">
+        <form method="POST" action="/" >
           <h3 class="mb-3">Select Color Pattern:</h3>
 
           <div class="form-check">
