--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html class="h-100">
 
 <head>
-  <title>RainbowWarriorSettins</title>
+  <title>RainbowWarriorSettings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./bootstrap.min.css" >
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="bootstrap.min.css" >
+  <link rel="stylesheet" href="style.css">
 </head>
   <body class="h-100">
     <div class="ground"></div>
@@ -62,3 +62,4 @@
   </body>
 
 </html>
+"""
