refactoring & cleanup. probs when chosing lightPattern - core1 paniced (loadStoreError)

--- a/www/alarm.html
+++ b/www/alarm.html
@@ -47,22 +47,22 @@
   <form method="POST" action="alarm.html" id="setSound">
     <label form="setSound">Wecksound wählen</label>
   </br>
-  <input type="radio" id="Super Mario - Main Theme" name="setSound" value="Super Mario - Main Theme">
+  <input type="radio" id="Super Mario - Main Theme" name="setSound" value="MarioMain">
     <label for="Super Mario - Main Theme"> Super Mario - Main Theme</label> </br>
 
-    <input type="radio" id="Super Mario - Title Music" name="setSound" value="Super Mario - Title Music">
+    <input type="radio" id="Super Mario - Title Music" name="setSound" value="MarioTitle">
       <label for="Super Mario - Title Music"> Super Mario - Title Music</label> </br>
 
     <input type="radio" id="Looney" name="setSound" value="Looney">
       <label for="Looney"> Looney Tunes Theme</label> </br>
 
-    <input type="radio" id="The Simpsons" name="setSound" value="The Simpsons">
+    <input type="radio" id="The Simpsons" name="setSound" value="Simpsons">
       <label for="The Simpsons"> The Simpsons</label> </br>
 
     <input type="radio" id="Indiana" name="setSound" value="Indiana">
       <label for="Indiana"> Indiana Jones</label> </br>
 
-    <input type="radio" id="muppets" name="setSound" value="muppets">
+    <input type="radio" id="muppets" name="setSound" value="Muppets">
       <label for="muppets"> The Muppet Show</label> </br>
 
     <input type="radio" id="Gadget" name="setSound" value="Gadget">
