errors with gc_realloc seem to be gone. was all a matter of timing!

--- a/www/rtc.html
+++ b/www/rtc.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <form method="POST" action="alarm.html" id="setTime">
+    <form method="POST" action="alarm" id="setTime">
       <label form="setTime">set current system time</label></br>
       <label for"year">Year</label>
       <input type="text" name="year" id="year" maxlength="4">
@@ -25,7 +25,7 @@
     </form>
     </br>
     </br>
-    <form method="POST" action="alarm.html" id="setAlarm">
+    <form method="POST" action="alarm" id="setAlarm">
       <label form="setAlarm">set Alarm time</label>
       </br>
       <label for"hour">Hour</label>
