inserted all animations in page made rainbow transparent touchbutton stops threads if running to prevent crash when using homepage while thread running

--- a/www/index.html
+++ b/www/index.html
@@ -46,11 +46,27 @@
           </div>
 
           <div class="form-check">
-            <label class="form-check-label"><input class="form-check-input" type="radio" id="light4" name="light" value="ColorGradient">ColorGradient</label>
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light4" name="light" value="Sparkle">RainbowSparkle</label>
           </div>
 
           <div class="form-check">
-            <label class="form-check-label"><input class="form-check-input" type="radio" id="light5" name="light" value="Off">Turn LEDs off</label>
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light5" name="light" value="Ripple">Ripple</label>
+          </div>
+
+          <div class="form-check">
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light6" name="light" value="Wave">Wave</label>
+          </div>
+
+          <div class="form-check">
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light7" name="light" value="ColorGradient">ColorGradient</label>
+          </div>
+
+          <div class="form-check">
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light8" name="light" value="Rainbow">Rainbow</label>
+          </div>
+
+          <div class="form-check">
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light9" name="light" value="Off">Turn LEDs off</label>
           </div>
 
           <div class="my-4">
