--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html class="h-100">
 
 <head>
   <title>RainbowWarriorSettings</title>
@@ -25,13 +24,17 @@
       <div class="shadow"></div>
       <div class="shadow"></div>
     </div>
-
-    <div class="text-white align-items-center container d-flex flex-column h-100 justify-content-end pb-md-5">
-      <h1 class="">RainbowWarrior</h1>
+    <div class="container text-white align-items-center d-flex flex-column h-100 justify-content-end pb-md-5">
+      <div class="sticky-top" id="id3">
+        <a href ="/" class ="btn btn-dark btn-lg" role="button"> Animationen </a>
+        <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" disabled> Alarm </a>
+        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe auswählen </a>
+      </div>
+      <h1 id="id2">RainbowWarrior</h1>
       <div class="mt-3">
 
-        <form method="POST" action="/" >
-          <h3 class="mb-3">Select Color Pattern:</h3>
+        <form method="POST" action="/" id="id3">
+          <h3 class="mb-3">LED Pattern auswählen:</h3>
 
           <div class="form-check">
             <label class="form-check-label"><input class="form-check-input" type="radio" id="light1" name="light" value="RainbowCycle">RainbowCycle</label>
