--- a/pyboard_code/www/led.html
+++ b/pyboard_code/www/led.html
@@ -3,17 +3,23 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src="huewheel.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+	<script src="underscore-min.js"></script>
+  <link rel="stylesheet" href="bootstrap.min.css" >
+  <link rel="stylesheet" href="style.css">
 </head>
 <body style="font-size: 200%; font-family: Monaco, monospace; background: CornFlowerBlue;">
-
-	<div id="container" style="width:350px; margin:25px auto 0 auto;">
-		<div id="huewheel"></div>
-		<br>
-		<div id="info"></div>
-		<br>
-	</div>
-
+    <div class="text-white align-items-center container d-flex flex-column h-100 justify-content-end pb-md-5">
+      <div class="sticky-top" id="id3" >
+        <a href ="/" class ="btn btn-dark btn-lg" role="button"> Animationen </a>
+        <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" disabled> Alarm </a>
+        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe auswählen </a>
+    	<div id="container" style="width:350px; margin:25px auto 0 auto;">
+    		<div id="huewheel"></div>
+    		<br>
+    		<div id="info"></div>
+    		<br>
+    	</div>
+    </div>
 <script type="text/javascript">
 	var throttleSetColor = _.throttle(setColor, 400);
 
@@ -45,10 +51,10 @@
 		shiftKeyFactor:  10
 	});
 
-	
+
 	function setColor(e) {
 		document.getElementById('info').innerHTML = 'R:' + ('000' + e.r).substr(-3) +
-			'   G:' + ('000' + e.g).substr(-3) + 
+			'   G:' + ('000' + e.g).substr(-3) +
 			'   B:' + ('000' + e.b).substr(-3);
 
 		var colorJSON = '{"red":' + e.r + ', "green":' + e.g + ', "blue":' + e.b + '}';
@@ -57,7 +63,7 @@
 		xhttp.setRequestHeader('Content-type', 'application/json');
 		xhttp.send(colorJSON);
 	}
-		
+
 </script>
 </body>
 </html>
