--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -73,7 +73,7 @@
           </div>
 
           <div class="my-4">
-            <input class="btn btn-primary" type="submit" name="li" value="Submit color"></b>
+            <input class="btn btn-dark" type="submit" name="li" value="Submit color"></b>
           </div>
         </form>
       </div>
