--- a/pyboard_code/www/led.html
+++ b/pyboard_code/www/led.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="bootstrap.min.css" >
   <link rel="stylesheet" href="style.css">
 </head>
-<body style="font-size: 200%; font-family: Monaco, monospace; background: CornFlowerBlue;">
+<body class="h-100" style="background: CornFlowerBlue;">
+
     <div class="text-white align-items-center container d-flex flex-column h-100 justify-content-end pb-md-5">
       <div class="sticky-top" id="id3" >
         <a href ="/" class ="btn btn-dark btn-lg" role="button"> Animationen </a>
@@ -16,7 +17,7 @@
     	<div id="container" style="width:350px; margin:25px auto 0 auto;">
     		<div id="huewheel"></div>
     		<br>
-    		<div id="info"></div>
+    		<div id="info" style="font-size: 200%; font-family: Monaco, monospace; "></div>
     		<br>
     	</div>
     </div>
