darker website colors, added links between sites

--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -30,11 +30,11 @@
         <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" disabled> Alarm </a>
         <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe auswählen </a>
       </div>
-      <h1 id="id2">RainbowWarrior</h1>
+      <h1 id="id1">RainbowWarrior</h1>
       <div class="mt-3">
 
         <form method="POST" action="/" id="id3">
-          <h3 class="mb-3">LED Pattern auswählen:</h3>
+          <h3 class="mb-3">LED Pattern ausw&auml;hlen:</h3>
 
           <div class="form-check">
             <label class="form-check-label"><input class="form-check-input" type="radio" id="light1" name="light" value="RainbowCycle">RainbowCycle</label>
