--- a/pyboard_code/www/led.html
+++ b/pyboard_code/www/led.html
@@ -13,7 +13,7 @@
       <div class="sticky-top" id="id3" >
         <a href ="/" class ="btn btn-dark btn-lg" role="button"> Animationen </a>
         <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" disabled> Alarm </a>
-        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe auswählen </a>
+        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe ausw&auml;hlen </a>
     	<div id="container" style="width:350px; margin:25px auto 0 auto;">
     		<div id="huewheel"></div>
     		<br>
