--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -26,15 +26,16 @@
     </div>
     <div class="container text-white align-items-center d-flex flex-column h-100 justify-content-end pb-md-5">
       <div class="sticky-top" id="id3">
-        <a href ="/" class ="btn btn-dark btn-lg" role="button"> Animationen </a>
-        <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" disabled> Alarm </a>
-        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe auswählen </a>
+        <a href ="/" class ="btn btn-dark btn-lg" role="button" disabled> Animationen </a>
+        <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" > Alarm </a>
+        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe</a>
       </div>
       <h1 id="id1">RainbowWarrior</h1>
+      <h2 id="id3"></h2>
       <div class="mt-3">
 
-        <form method="POST" action="/" id="id3">
-          <h3 class="mb-3">LED Pattern ausw&auml;hlen:</h3>
+        <form method="POST" action="/">
+          <h3 class="mb-3" id="id1">LED Pattern ausw&auml;hlen:</h3>
 
           <div class="form-check">
             <label class="form-check-label"><input class="form-check-input" type="radio" id="light1" name="light" value="RainbowCycle">RainbowCycle</label>
