--- a/pyboard_code/www/led.html
+++ b/pyboard_code/www/led.html
@@ -13,7 +13,7 @@
       <div class="sticky-top" id="id3" >
         <a href ="/" class ="btn btn-dark btn-lg" role="button"> Animationen </a>
         <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" disabled> Alarm </a>
-        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe ausw&auml;hlen </a>
+        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe </a>
     	<div id="container" style="width:350px; margin:25px auto 0 auto;">
     		<div id="huewheel"></div>
     		<br>
@@ -23,7 +23,6 @@
     </div>
 <script type="text/javascript">
 	var throttleSetColor = _.throttle(setColor, 400);
-
 	hw = new HueWheel('huewheel', {
 		onChange:  throttleSetColor,
 		saturation:  1.0,
@@ -51,20 +50,16 @@
 		lightnessKeyDelta:  1,
 		shiftKeyFactor:  10
 	});
-
-
 	function setColor(e) {
 		document.getElementById('info').innerHTML = 'R:' + ('000' + e.r).substr(-3) +
 			'   G:' + ('000' + e.g).substr(-3) +
 			'   B:' + ('000' + e.b).substr(-3);
-
 		var colorJSON = '{"red":' + e.r + ', "green":' + e.g + ', "blue":' + e.b + '}';
 		var xhttp = new XMLHttpRequest();
 		xhttp.open('POST', 'http://' + window.location.hostname + '/led', true);
 		xhttp.setRequestHeader('Content-type', 'application/json');
 		xhttp.send(colorJSON);
 	}
-
 </script>
 </body>
 </html>
