improved routine to start animations

--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -66,6 +66,10 @@
           </div>
 
           <div class="form-check">
+            <label class="form-check-label"><input class="form-check-input" type="radio" id="light9" name="light" value="RunningDots">Running Dots</label>
+          </div>
+
+          <div class="form-check">
             <label class="form-check-label"><input class="form-check-input" type="radio" id="light9" name="light" value="Off">Turn LEDs off</label>
           </div>
 
