small improvements add req. html tag make buttons more clear add german language meta tag remove invalid duplicated id assignement

--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -5,6 +5,7 @@
     <title>RainbowWarriorSettings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -69,13 +70,13 @@
           <!--  <h3 class="mb-3" id="id1">LED Pattern ausw&auml;hlen:</h3-->
           <div class="input-group">
             <select class="custom-select" id="inputGroupSelect04" name="light">
-                <option selected>Animation wählen ...</option>
+                <option selected>Animation</option>
                 <option value="running_dot">Running Dot</option>
                 <option value="v_shape">V-Shape</option>
                 <option value="crossing_dots">Crossing Dots</option>
               </select>
             <div class="input-group-append">
-              <button class="btn btn-dark" type="submit" name="button" value="light">ausw&auml;hlen</button>
+              <button class="btn btn-dark" type="submit" name="button" value="light">Auswählen</button>
             </div>
           </div>
           </br>
@@ -83,13 +84,13 @@
           <!--<h3 class="mb-3" id="id1">Song ausw&auml;hlen:</h3>-->
           <div class="input-group">
             <select class="custom-select" id="inputGroupSelect04" name="sound">
-                  <option selected>Song auswählen ...</option>
+                  <option selected>Song</option>
                   <option value="OneMoreT">One More Time</option>
                   <option value="MarioTitle">Super Mario Titelsong</option>
                   <option value="Tetris">Tetris Theme</option>
                 </select>
             <div class="input-group-append">
-              <button class="btn btn-dark" type="submit" name="button" value="sound">Button</button>
+              <button class="btn btn-dark" type="submit" name="button" value="sound">Auswählen</button>
             </div>
           </div>
         </form>
