--- a/pyboard_code/www/index.html
+++ b/pyboard_code/www/index.html
@@ -1,101 +1,106 @@
 <!DOCTYPE html>
+<html>
 
-<html class="h-100">
-  <head>
-    <title>RainbowWarriorSettings</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <title>RainbowWarriorSettings</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-  <body class="h-100">
-    <div class="ground"></div>
-    <div class="sky">
-      <div class="cloud variant-1"></div>
-      <div class="cloud variant-2"></div>
-      <div class="cloud variant-3"></div>
-      <div class="cloud variant-4"></div>
-      <div class="cloud variant-5"></div>
+<body class="h-100">
+  <div class="ground"></div>
+  <div class="sky">
+    <div class="cloud variant-1"></div>
+    <div class="cloud variant-2"></div>
+    <div class="cloud variant-3"></div>
+    <div class="cloud variant-4"></div>
+    <div class="cloud variant-5"></div>
+  </div>
+  <div class="rainbow-preloader">
+    <div class="rainbow-stripe"></div>
+    <div class="rainbow-stripe"></div>
+    <div class="rainbow-stripe"></div>
+    <div class="rainbow-stripe"></div>
+    <div class="rainbow-stripe"></div>
+    <div class="shadow"></div>
+    <div class="shadow"></div>
+  </div>
+  <div class="container text-white align-items-center d-flex flex-column h-100 justify-content-end pb-md-5">
+    <div class="sticky-top" id="id3">
+      <a href ="/" class ="btn btn-dark btn-lg" role="button" disabled> Animationen </a>
+      <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" > Alarm </a>
+      <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe</a>
     </div>
-    <div class="rainbow-preloader">
-      <div class="rainbow-stripe"></div>
-      <div class="rainbow-stripe"></div>
-      <div class="rainbow-stripe"></div>
-      <div class="rainbow-stripe"></div>
-      <div class="rainbow-stripe"></div>
-      <div class="shadow"></div>
-      <div class="shadow"></div>
-    </div>
-    <div class="container text-white align-items-center d-flex flex-column h-100 justify-content-end pb-md-5">
-      <div class="sticky-top" id="id3">
-        <a href ="/" class ="btn btn-dark btn-lg" role="button" disabled> Animationen </a>
-        <a href ="/alarm" class ="btn btn-dark btn-lg" role="button" > Alarm </a>
-        <a href ="/led" class ="btn btn-dark btn-lg" role="button"> Farbe</a>
-      </div>
-      <h1 id="id1">RainbowWarrior</h1>
-      <div class="mt-3 align-items-center">
-        <p>
-          {0:02.02d}.{1:02.02d}.{2:02.02d} {3:02.02d}:{4:02.02d} Uhr
-        </p>
+    <h1 id="id1">RainbowWarrior</h1>
+    <h2 id="id3"></h2>
+    <div class="mt-3 align-items-center">
 
-        <form class="form-inline" method="POST" action="/" role="form">
-          <div class="input-group">
+      <p>
+        {mday:02d}.{month:02d}.{year:04d} {hour:02d}:{minute:02d} Uhr
+      </p>
 
-            <label class="sr-only" for="inlineFormInputDate">Datum</label>
-            <input type="text" name="date" class="form-control mb-2" id="inlineFormInputDate" placeholder="{0:02.02d}.{1:02.02d}.{2:02.02d}" name="date">
-
-            <label class="sr-only" for="inlineFormInputTime">Uhrzeit</label>
-            <input type="text" name="time" class="form-control mb-2" id="inlineFormInputTime" placeholder="{3:02.02d}:{4:02.02d}">
-            <div class="input-group-append">
-              <button type="submit" class="btn btn-primary mb-2" name="dateTime">Zeit einstellen</button>
-            </div>
+      <form class="form-inline" method="POST" action="/" role="form">
+        <div class="input-group">
+          <label class="sr-only" for="inlineFormInputDate">Datum</label>
+          <input type="text" name="date" class="form-control mb-2" id="inlineFormInputDate"  name="date" placeholder="{mday:02d}.{month:02d}.{year:02d}">
+          <!---->
+          <label class="sr-only" for="inlineFormInputTime">Uhrzeit</label>
+          <input type="text" name="time" class="form-control mb-2" id="inlineFormInputTime" placeholder="{hour:02d}:{minute:02d}" >
+          <!---->
+          <div class="input-group-append">
+            <button type="submit" class="btn btn-dark mb-2" name="button" value="datetime">Zeit einstellen</button>
           </div>
-        </form>
+        </div>
+      </form>
 
-
-        <form class="form-inline" method="POST" action="/" role="form">
-          <div class="input-group">
-
-            <label class="sr-only" for="inlineFormInputTime">Weckzeit</label>
-            <input type="text" name="alarm" class="form-control mb-2" id="inlineFormInputTime" placeholder="{5:02.02d}:{6:02.02d}">
-            <div class="input-group-append">
-              <button type="submit" class="btn btn-primary mb-2" name="dateTime">Weckzeit einstellen</button>
-            </div>
+      <form class="form-inline" method="POST" action="/" role="form">
+        <div class="input-group">
+          <label class="sr-only" for="inlineFormInputTime">Weckzeit</label>
+          <input type="text" name="alarm" class="form-control mb-2" id="inlineFormInputTime" placeholder="{hour:02d}:{minute:02d}">
+          <div class="input-group-append">
+            <button type="submit" class="btn btn-dark mb-2" name="button" value="alarm">Weckzeit einstellen</button>
           </div>
-        </form>
+        </div>
+      </form>
+
+      </br>
+      </br>
+      <form class="form-group" method="POST" action="/" role="form">
+        <!--  <h3 class="mb-3" id="id1">LED Pattern ausw&auml;hlen:</h3-->
+        <div class="input-group">
+          <select class="custom-select" id="inputGroupSelect04" name="light">
+              <option selected>Animation w&auml;hlen ...</option>
+              <option value="running_dot">Running Dot</option>
+              <option value="v_shape">V-Shape</option>
+              <option value="crossing_dots">Crossing Dots</option>
+              <option value="fire">Fire</option>
+              <option value="wave">Wave</option>
+              <option value="ripple">Ripple</option>
+              <option value="sparkle">Sparkle</option>
+
+            </select>
+          <div class="input-group-append">
+            <button class="btn btn-dark" type="submit" name="button" value="light">ausw&auml;hlen</button>
+          </div>
+        </div>
         </br>
-        </br>
-        <form class="form-group" method="POST" action="/" role="form">
-          <!--  <h3 class="mb-3" id="id1">LED Pattern ausw&auml;hlen:</h3-->
-          <div class="input-group">
-            <select class="custom-select" id="inputGroupSelect04" name="light">
-                <option selected>Animation</option>
-                <option value="running_dot">Running Dot</option>
-                <option value="v_shape">V-Shape</option>
-                <option value="crossing_dots">Crossing Dots</option>
+
+        <!--<h3 class="mb-3" id="id1">Song ausw&auml;hlen:</h3>-->
+        <div class="input-group">
+          <select class="custom-select" id="inputGroupSelect04" name="sound">
+                <option selected>Song ausw&auml;hlen ...</option>
+                <option value="OneMoreT">One More Time</option>
+                <option value="MarioTitle">Super Mario Titelsong</option>
+                <option value="Tetris">Tetris Theme</option>
               </select>
-            <div class="input-group-append">
-              <button class="btn btn-dark" type="submit" name="button" value="light">Auswählen</button>
-            </div>
+          <div class="input-group-append">
+            <button class="btn btn-dark" type="submit" name="button" value="sound">ausw&auml;hlen</button>
           </div>
-          </br>
-          </br>
-          <!--<h3 class="mb-3" id="id1">Song ausw&auml;hlen:</h3>-->
-          <div class="input-group">
-            <select class="custom-select" id="inputGroupSelect04" name="sound">
-                  <option selected>Song</option>
-                  <option value="OneMoreT">One More Time</option>
-                  <option value="MarioTitle">Super Mario Titelsong</option>
-                  <option value="Tetris">Tetris Theme</option>
-                </select>
-            <div class="input-group-append">
-              <button class="btn btn-dark" type="submit" name="button" value="sound">Auswählen</button>
-            </div>
-          </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
-  </body>
+  </div>
+</body>
 
 </html>
